# wazuh-agent-test

.github/actions/4_builderpackage_agent_linux/: action.yml
.github/actions/4_testintegration_compile/: action.yml
.github/workflows/: 4_codequality_clangformat.yml  4_codequality_coverage.yml  5_builderpackage_agent-linux.yml  5_testintegration_compile.yml  5_testintegration_ctest.yml  await_workflow.yml  test.yml  test_2.yml
src/agent/: CMakeLists.txt
src/agent/command_handler/include/command_entry/: command_entry.hpp
src/agent/command_handler/src/: command_handler.cpp
src/agent/communicator/include/: communicator.hpp
src/agent/communicator/tests/: CMakeLists.txt  communicator_test.cpp  http_socket_test.cpp
src/agent/http_client/src/: http_socket.hpp
src/agent/http_client/tests/: CMakeLists.txt  http_resolver_test.cpp  http_socket_test.cpp
src/agent/restart/: CMakeLists.txt
src/agent/restart/include/: restart.hpp
src/agent/restart/src/: restart_unix.cpp  restart_unix.hpp  restart_win.cpp
src/agent/src/: agent.cpp
src/common/data_provider/: CMakeLists.txt
src/common/data_provider/src/: sysInfoWin.cpp  utilsWrapperWin.cpp  utilsWrapperWin.hpp
src/common/data_provider/tests/sysInfoWin/: sysInfoWin_test.h
src/common/file_helper/file_io/src/: file_io_utils.cpp
src/modules/inventory/include/: inventory.hpp
src/modules/inventory/src/: inventory.cpp  inventoryImp.cpp
